Closed Bug 1624747 Opened 5 years ago Closed 5 years ago

Intermittent /url/failure.html | application crashed [@ nsDocShell::SetScrollbarPreference(mozilla::ScrollbarPreference)]

Categories

(Core :: DOM: Navigation, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla76
Tracking Status
firefox-esr68 --- unaffected
firefox74 --- wontfix
firefox75 --- wontfix
firefox76 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: emilio)

References

(Regression)

Details

(Keywords: crash, intermittent-failure, regression)

Crash Data

Attachments

(1 file)

Filed by: opoprus [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=294568971&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Vh9rhvhDQ9eYxB8-l7xXHQ/runs/0/artifacts/public/logs/live_backing.log


[task 2020-03-24T22:42:23.425Z] 22:42:23 INFO - TEST-START | /url/failure.html
[task 2020-03-24T22:42:23.715Z] 22:42:23 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:23.774Z] 22:42:23 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:23.859Z] 22:42:23 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:23.929Z] 22:42:23 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:24.011Z] 22:42:24 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:24.093Z] 22:42:24 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:24.172Z] 22:42:24 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:24.251Z] 22:42:24 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:25.297Z] 22:42:25 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:25.364Z] 22:42:25 INFO - PID 2652 | JavaScript error: resource://devtools/client/jsonview/converter-observer.js, line 94: NS_ERROR_NOT_AVAILABLE: Component returned failure code: 0x80040111 (NS_ERROR_NOT_AVAILABLE) [nsIChannel.contentType]
[task 2020-03-24T22:42:25.475Z] 22:42:25 INFO - PID 2652 | A content process crashed and MOZ_CRASHREPORTER_SHUTDOWN is set, shutting down
[task 2020-03-24T22:42:25.614Z] 22:42:25 INFO - PID 2652 | [Parent 8224, Gecko_IOThread] WARNING: file /builds/worker/checkouts/gecko/ipc/chromium/src/base/process_util_win.cc, line 166
[task 2020-03-24T22:42:25.705Z] 22:42:25 INFO - mozcrash .........................................................................................................................................................................................................................................................................................................................
[task 2020-03-24T22:42:25.705Z] 22:42:25 INFO - mozcrash Downloading symbols from: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/W14bFrTARxaLddBukhsO9A/artifacts/public/build/target.crashreporter-symbols.zip
[task 2020-03-24T22:42:26.143Z] 22:42:26 INFO - PID 2652 | 1585089746139 Marionette INFO Stopped listening on port 60319
[task 2020-03-24T22:42:26.202Z] 22:42:26 INFO - PID 2652 | ###!!! [Child][RunMessage] Error: Channel closing: too late to send/recv, messages will be lost
[task 2020-03-24T22:42:31.577Z] 22:42:31 INFO - mozcrash Copy/paste: Z:\task_1585087815\fetches\minidump_stackwalk\minidump_stackwalk.exe c:\users\task_1585087815\appdata\local\temp\tmpnr9onn\minidumps\8521e6c3-e0f2-432a-bf8f-ad480dded411.dmp c:\users\task_1585087815\appdata\local\temp\tmpbouwyq
[task 2020-03-24T22:42:35.788Z] 22:42:35 INFO - mozcrash Saved minidump as Z:\task_1585087815\build\blobber_upload_dir\8521e6c3-e0f2-432a-bf8f-ad480dded411.dmp
[task 2020-03-24T22:42:35.788Z] 22:42:35 INFO - mozcrash Saved app info as Z:\task_1585087815\build\blobber_upload_dir\8521e6c3-e0f2-432a-bf8f-ad480dded411.extra
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - PROCESS-CRASH | /url/failure.html | application crashed [@ nsDocShell::SetScrollbarPreference(mozilla::ScrollbarPreference)]
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Crash dump filename: c:\users\task_1585087815\appdata\local\temp\tmpnr9onn\minidumps\8521e6c3-e0f2-432a-bf8f-ad480dded411.dmp
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Operating system: Windows NT
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - 10.0.17134
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - CPU: amd64
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - family 6 model 85 stepping 7
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - 8 CPUs
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO -
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - GPU: UNKNOWN
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO -
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Crash reason: EXCEPTION_ACCESS_VIOLATION_READ
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Crash address: 0x3c0
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Assertion: Unknown assertion type 0x00000000
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Process uptime: 0 seconds
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO -
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Thread 0 (crashed)
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - 0 xul.dll!nsDocShell::SetScrollbarPreference(mozilla::ScrollbarPreference) [nsDocShell.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 5158 + 0x0]
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - rax = 0x0000000000000000 rdx = 0x000000003e5fd900
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - rcx = 0x0000000000000000 rbx = 0x000000383e5fd900
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - rsi = 0x000001883e5cb160 rdi = 0x000001883e565800
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - rbp = 0x000000003e565801 rsp = 0x000000383e5fd7c0
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - r8 = 0x000001883e5c52a0 r9 = 0x00007ffbeafb9338
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - r10 = 0x000000000000003a r11 = 0x0000000000000000
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - r12 = 0x000000383e5ff2e0 r13 = 0x000001883e565800
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - r14 = 0x000000383e5fd908 r15 = 0x000001883e50a901
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - rip = 0x00007ffbe9565fd5
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - Found by: given as instruction pointer in context
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - 1 xul.dll!mozilla::dom::BrowserChild::RecvShow(mozilla::dom::ParentShowInfo const&, mozilla::dom::OwnerShowInfo const&) [BrowserChild.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 1170 + 0x5d]
[task 2020-03-24T22:42:35.807Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rsp = 0x000000383e5fd800 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe840605c
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - 2 xul.dll!mozilla::dom::PBrowserChild::OnMessageReceived(IPC::Message const&) [PBrowserChild.cpp: : 4411 + 0x24]
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rsp = 0x000000383e5fd880 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe69fd403
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - 3 xul.dll!mozilla::dom::PContentChild::OnMessageReceived(IPC::Message const&) [PContentChild.cpp: : 8314 + 0x9]
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rsp = 0x000000383e5fdc00 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe67e31a1
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - 4 xul.dll!mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [MessageChannel.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 2187 + 0x9]
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rsp = 0x000000383e5fefc0 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe674103c
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - 5 xul.dll!mozilla::ipc::MessageChannel::DispatchMessage(IPC::Message&&) [MessageChannel.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 2111 + 0x5]
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.808Z] 22:42:35 INFO - rsp = 0x000000383e5ff020 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe674010e
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - 6 xul.dll!mozilla::ipc::MessageChannel::MessageTask::Run() [MessageChannel.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 1990 + 0xc]
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rsp = 0x000000383e5ff100 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe6740a0f
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - 7 xul.dll!mozilla::SchedulerGroup::Runnable::Run() [SchedulerGroup.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 282 + 0x9]
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rsp = 0x000000383e5ff140 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe622c377
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - 8 xul.dll!nsThread::ProcessNextEvent(bool, bool*) [nsThread.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 1220 + 0x9]
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rsp = 0x000000383e5ff180 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe623871f
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - 9 xul.dll!NS_ProcessNextEvent(nsIThread*, bool) [nsThreadUtils.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 481 + 0xd]
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - rsp = 0x000000383e5ff740 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe623b8ce
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.809Z] 22:42:35 INFO - 10 xul.dll!mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [MessagePump.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 87 + 0xa]
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rsp = 0x000000383e5ff790 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe67430da
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - 11 xul.dll!MessageLoop::RunHandler() [message_loop.cc:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 308 + 0xf]
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rsp = 0x000000383e5ff800 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe6710dc9
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - 12 xul.dll!MessageLoop::Run() [message_loop.cc:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 290 + 0x5]
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rsp = 0x000000383e5ff850 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe6710d48
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - 13 xul.dll!nsBaseAppShell::Run() [nsBaseAppShell.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 137 + 0xd]
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rsp = 0x000000383e5ff8a0 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe868b5c8
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - 14 xul.dll!nsAppShell::Run() [nsAppShell.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 406 + 0x8]
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - rsp = 0x000000383e5ff8e0 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.810Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe86fc524
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - 15 xul.dll!XRE_RunAppShell() [nsEmbedFunctions.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 909 + 0x6]
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rsp = 0x000000383e5ff930 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe98cdd05
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - 16 xul.dll!MessageLoop::RunHandler() [message_loop.cc:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 308 + 0xf]
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rsp = 0x000000383e5ff970 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe6710dc9
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - 17 xul.dll!MessageLoop::Run() [message_loop.cc:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 290 + 0x5]
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rsp = 0x000000383e5ff9c0 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe6710d48
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - 18 xul.dll!XRE_InitChildProcess(int, char**, XREChildData const*) [nsEmbedFunctions.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 740 + 0xa]
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - rsp = 0x000000383e5ffa10 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffbe98cdaa6
[task 2020-03-24T22:42:35.811Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - 19 firefox.exe!NS_internal_main(int, char**, char**) [nsBrowserApp.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 303 + 0x91]
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rsp = 0x000000383e5ffc70 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ff7fcfa15db
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - 20 firefox.exe!wmain(int, wchar_t**) [nsWindowsWMain.cpp:dbabf2e388fa750b4901df8dfab60d8a17a0c5ff : 131 + 0x15]
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rsp = 0x000000383e5ffe40 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ff7fcfa1232
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - 21 firefox.exe!__scrt_common_main_seh() [exe_common.inl : 288 + 0x22]
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rsp = 0x000000383e5fff00 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ff7fcff4348
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - 22 kernel32.dll!BaseThreadInitThunk + 0x14
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rsp = 0x000000383e5fff40 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffc2b263034
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - Found by: call frame info
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - 23 ntdll.dll!SdbpCheckMatchingFiles + 0x81
[task 2020-03-24T22:42:35.812Z] 22:42:35 INFO - rbx = 0x000000383e5fd900 rbp = 0x000000003e565801
[task 2020-03-24T22:42:35.813Z] 22:42:35 INFO - rsp = 0x000000383e5fff70 r12 = 0x000000383e5ff2e0
[task 2020-03-24T22:42:35.813Z] 22:42:35 INFO - r13 = 0x000001883e565800 r14 = 0x000000383e5fd908
[task 2020-03-24T22:42:35.813Z] 22:42:35 INFO - r15 = 0x000001883e50a901 rip = 0x00007ffc2b4b1461
[task 2020-03-24T22:42:35.813Z] 22:42:35 INFO - Found by: call frame info

Code inspection hints about bug 1588791

Flags: needinfo?(emilio)
Regressed by: 1588791
Has Regression Range: --- → yes
Keywords: regression
Priority: -- → P1
Assignee: nobody → emilio
Flags: needinfo?(emilio)

Apparently we can have collected the nsWebBrowser already, or its docshell.

Just deal with it.

Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/0d709dba3210 Null-check docshell from BrowserChild::RecvScrollbarPreferencesChanged / RecvShow. r=nika
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla76
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: