Bug 1624747 - Null-check docshell from BrowserChild::RecvScrollbarPreferencesChanged / RecvShow. r=nika

Apparently we can have collected the nsWebBrowser already, or its docshell.

mWebNav is a nsWebBrowser instance, which is destroyed early during shutdown, in
BrowserChild::DestroyWindow, which nulls out its nsDocShell instance and can cause
do_GetInterface to fail.

Just deal with it.

Differential Revision: https://phabricator.services.mozilla.com/D69244

--HG--
extra : moz-landing-system : lando